...
            modifier = Modifier
                .padding(16.dp)
                .weight(1f),
            verticalArrangement = Arrangement.Center
        ) {
            Text(
                text = "Wybierz kategorię:",
                fontSize = 36.sp,
                fontWeight = FontWeight.Bold,
                color = Color.Black,
                textAlign = TextAlign.Center
            )
            Spacer(modifier = Modifier.height(88.dp))
            // Category buttons with proper navigation
            val categories = listOf(
                "Owoce" to Color(0xFFC1FBA4),
                "Warzywa" to Color(0xFFD9FDA1),
                "Zioła" to Color(0xFFF0FF9E)
            )

            categories.forEach { (category, color) ->
                CategoryButton(
...
