...

            Button(
                onClick = { onButtonClicked() },
                shape = RoundedCornerShape(8.dp),
                colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFF0FF9E)) // Light gray button
            ) {
                Text(text = "Rozpocznij", color = Color.Black)
            }
        }
    }
}

