...
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(8.dp)
            ) {
                SpinningArrowBackIcon(onClick = onBackClick)
                Text(
                    text = if (selectedTab == DetailsTab.Description) "Opis" else "Galeria",
                    style = MaterialTheme.typography.titleLarge
                )
            }

            HorizontalPager(
                state = pagerState
...
